--- a/publications.html
+++ b/publications.html
@@ -156,7 +156,7 @@
 </li>
 <li><p>[J30] Y. Chen, <b>L. You</b>, A.-A. Lu, X. Q. Gao*, and X.-G. Xia, “Channel estimation and robust detection for IQ imbalanced uplink massive MIMO-OFDM with adjustable phase shift pilots,” <b><i>IEEE Access</i></b>, vol. 9, pp. 35864-35878, Mar. 2021. [<a href="https://ieeexplore.ieee.org/document/9356598">Full Paper</a>]</p>
 </li>
-<li><p>[J29] <b>L. You</b>, J. Xiong, D. W. K. Ng, C. Yuen, W. Wang, and X. Q. Gao, “Energy efficiency and spectral efficiency tradeoff in RIS-aided multiuser MIMO uplink transmission,” <b><i>IEEE Transactions on Signal Processing</i></b>, vol. 69, pp. 1407-1421, Mar. 2021. <b>(Highly Cited Paper)</b> [<a href="https://ieeexplore.ieee.org/document/9309152">Full Paper</a>]</p>
+<li><p>[J29] <b>L. You</b>, J. Xiong, D. W. K. Ng, C. Yuen, W. Wang, and X. Q. Gao, “Energy efficiency and spectral efficiency tradeoff in RIS-aided multiuser MIMO uplink transmission,” <b><i>IEEE Transactions on Signal Processing</i></b>, vol. 69, pp. 1407-1421, Mar. 2021. <b>(ESI Highly Cited Paper)</b> [<a href="https://ieeexplore.ieee.org/document/9309152">Full Paper</a>]</p>
 </li>
 <li><p>[J28] X. Song, L. T. N. Landau, W. Wang, <b>L. You</b>, X. Q. Gao, and G. Fettweis, “On one-bit line-of-sight MIMO communications at flexible communications distances,” <b><i>IEEE Wireless Communications Letters</i></b>, vol. 10, no. 1, pp. 116-120, Jan. 2021. [<a href="https://ieeexplore.ieee.org/document/9187847">Full Paper</a>]</p>
 </li>
@@ -171,7 +171,7 @@
 </li>
 <li><p>[J24] Y. Liu, C. Pan, <b>L. You</b>, and W. Han, “D2D-enabled user cooperation in massive MIMO,” <b><i>IEEE Systems Journal</i></b>, vol. 14, no. 3, pp. 4406-4417, Sep. 2020. [<a href="https://ieeexplore.ieee.org/document/8865622">Full Paper</a>]</p>
 </li>
-<li><p>[J23] <b>L. You</b>, K.-X. Li, J. Wang, X. Q. Gao*, X.-G. Xia, and B. Ottersten, “Massive MIMO transmission for LEO satellite communications,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, vol. 38, no. 8, pp. 1851-1865, Aug. 2020. <b>(Highly Cited Paper and Best Readings in Satellite Mega Constellations)</b> [<a href="https://ieeexplore.ieee.org/document/9110855">Full Paper</a>]</p>
+<li><p>[J23] <b>L. You</b>, K.-X. Li, J. Wang, X. Q. Gao*, X.-G. Xia, and B. Ottersten, “Massive MIMO transmission for LEO satellite communications,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, vol. 38, no. 8, pp. 1851-1865, Aug. 2020. <b>(ESI Highly Cited Paper and Best Readings in Satellite Mega Constellations)</b> [<a href="https://ieeexplore.ieee.org/document/9110855">Full Paper</a>]</p>
 </li>
 <li><p>[J22] S. Li, Y. Liu*, <b>L. You</b>, W. J. Wang, H. Duan, and X. Li, “Covariance matrix reconstruction for DOA estimation in hybrid massive MIMO systems,” <b><i>IEEE Wireless Communications Letters</i></b>, vol. 9, no. 8, pp. 1196-1200, Aug. 2020. [<a href="https://ieeexplore.ieee.org/document/9052650">Full Paper</a>]</p>
 </li>
@@ -217,11 +217,11 @@
 </li>
 <li><p>[J4] <b>L. You</b>, X. Q. Gao*, G. Y. Li, X.-G. Xia, and N. Ma, “BDMA for millimeter-wave/Terahertz massive MIMO transmission with per-beam synchronization,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, vol. 35, no. 7, pp. 1550-1563, Jul. 2017. [<a href="https://ieeexplore.ieee.org/document/7913686">Full Paper</a>]</p>
 </li>
-<li><p>[J3] <b>L. You</b>, X. Q. Gao*, A. L. Swindlehurst, and W. Zhong, “Channel acquisition for massive MIMO-OFDM with adjustable phase shift pilots,,” <b><i>IEEE Transactions on Signal Processing</i></b>, vol. 64, no. 6, pp. 1461-1476, Mar. 2016. <b>(Highly Cited Paper)</b> [<a href="https://ieeexplore.ieee.org/document/7332961">Full Paper</a>]</p>
+<li><p>[J3] <b>L. You</b>, X. Q. Gao*, A. L. Swindlehurst, and W. Zhong, “Channel acquisition for massive MIMO-OFDM with adjustable phase shift pilots,,” <b><i>IEEE Transactions on Signal Processing</i></b>, vol. 64, no. 6, pp. 1461-1476, Mar. 2016. <b>(ESI Highly Cited Paper)</b> [<a href="https://ieeexplore.ieee.org/document/7332961">Full Paper</a>]</p>
 </li>
 <li><p>[J2] W. Zhong, <b>L. You</b>, T. T. Lian, and X. Q. Gao, “Multi-cell massive MIMO transmission with coordinated pilot reuse,” <b><i>Science China Technological Sciences</i></b>, vol. 58, no. 12, pp. 2186–2194, Dec. 2015. [<a href="https://link.springer.com/article/10.1007/s11431-015-5960-7">Full Paper</a>]</p>
 </li>
-<li><p>[J1] <b>L. You</b>, X. Q. Gao*, X.-G. Xia, N. Ma, and Y. Peng, “Pilot reuse for massive MIMO transmission over spatially correlated Rayleigh fading channels,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 14, no. 6, pp. 3352-3366, Jun. 2015. <b>(Highly Cited Paper)</b> [<a href="https://ieeexplore.ieee.org/document/7045498">Full Paper</a>]</p>
+<li><p>[J1] <b>L. You</b>, X. Q. Gao*, X.-G. Xia, N. Ma, and Y. Peng, “Pilot reuse for massive MIMO transmission over spatially correlated Rayleigh fading channels,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 14, no. 6, pp. 3352-3366, Jun. 2015. <b>(ESI Highly Cited Paper)</b> [<a href="https://ieeexplore.ieee.org/document/7045498">Full Paper</a>]</p>
 </li>
 </ul>
 <h2>Conference</h2>
