--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,8 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
+<li><p>[P5] Y. Ye, <b>L. You</b>, H. Xu, A. Elzanaty, K. -K. Wong and X. Q. Gao, “SCNR maximization for MIMO ISAC assisted by fluid antenna system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025.</p>
+</li>
 <li><p>[P4] Q. Zhang, L. Xu, J. H. Huang, T. Yang, J. Jiao, Y. Wang, Y. Shi, C. Y. Zhang, X. J. Zhang, K. Zhang, Y. P. Gong, N. Deng, N. Zhao, Z. Gao, S. J. Han, X. D. Xu, <b>L. You</b>, D. M. Wang, S. Jiang, D. X. Zhao, N. Zhang, L. J. Hu, X. W. He, Y. H. Li, X. Q. Gao, and X. H. You, “Distributed satellite information networks: Architecture, enabling technologies, and trends,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
 </li>
 <li><p>[P3] J. Fang, Y. Liang, G. Sun, H. Hou, Y. Wang, <b>L. You</b>, and W. J. Wang*, “Polar-coded tensor-based unsourced random access with soft decoding,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10938717">Full Paper</a>]</p>
@@ -75,7 +77,7 @@
 </li>
 <li><p>[J66] J. Fang, G. Sun, W. Wang*, <b>L. You</b>, and R. Ding, “OFDMA-based unsourced random access in LEO satellite Internet of Things,” <b><i>China Communications</i></b>, vol. 21, no. 1, pp. 13-23, Jan. 2024. [<a href="https://ieeexplore.ieee.org/document/10433448">Full Paper</a>]</p>
 </li>
-<li><p>[J65] Y. Ye, <b>L. You*</b>, J. Wang, H. Xu, K.-K. Wong, and X. Gao, “Fluid antenna-assisted MIMO transmission exploiting statistical CSI,” <b><i>IEEE Communications Letters</i></b>, vol. 28, no. 1, pp. 223-227, Jan. 2024. [<a href="https://ieeexplore.ieee.org/document/10328751">Full Paper</a>]</p>
+<li><p>[J65] Y. Ye, <b>L. You*</b>, J. Wang, H. Xu, K.-K. Wong, and X. Gao, “Fluid antenna-assisted MIMO transmission exploiting statistical CSI,” <b><i>IEEE Communications Letters</i></b>, vol. 28, no. 1, pp. 223-227, Jan. 2024. <b>(ESI Highly Cited Paper)</b> [<a href="https://ieeexplore.ieee.org/document/10328751">Full Paper</a>]</p>
 </li>
 </ul>
 <h4>Year 2023</h4>
