--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.03</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Vehicular Technology. (叶育琦的关于流体天线的论文被IEEE Transactions on Vehicular Technology录用)</p>
+</li>
 <li><p>[<span class="statement">2025.03</span>]  Yu Zhao's paper on massive MIMO was accepted by IEEE VTC 2025 Spring. (赵宇的关于大规模MIMO的论文被2025 IEEE VTC Spring录用)</p>
 </li>
 <li><p>[<span class="statement">2025.03</span>]  Mengyu Qian and Huibin Zhou received the Student Travel Grant for IEEE WCNC 2025. (课题组潜梦羽和周慧斌获得IEEE WCNC 2025 Student Travel Grant奖项)</p>
@@ -78,14 +80,14 @@ Email: lyou@seu.edu.cn <br />
 <li><p>[<span class="statement">2024.11</span>]  Zhenzhou Jin's paper on channel fingerprint construction was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10791446">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2024.10</span>]  Yongxiang Zhu's paper on massive MIMO LEO satellite integrated communication and localization systems was accepted by IEEE Communications Letters. (朱永祥的关于大规模MIMO低轨卫星通信定位一体化传输的论文被 IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10741194">[link]</a></p>
-</li>
-<li><p>[<span class="statement">2024.09</span>]  Li You was listed in the 2024 Stanford's list of World Top 2% scientists. (尤力老师入选2024年度斯坦福全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/uhGpPc3eZL7XN2aHzGgW7A">[link]</a></p>
 </li> 
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2024.09</span>]  Li You was listed in the 2024 Stanford's list of World Top 2% scientists. (尤力老师入选2024年度斯坦福全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/uhGpPc3eZL7XN2aHzGgW7A">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2024.09</span>]  Yongxiang Zhu's paper on massive MIMO LEO satellite localization systems was accepted by IEEE Transactions on Vehicular Technology. (朱永祥的关于大规模MIMO低轨卫星定位的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/10695037">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2024.09</span>]  Haohong Che's paper on XL-MIMO was accepted by IEEE Transactions on Vehicular Technology. (车昊鸿的关于超大规模MIMO的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/10693363/">[link]</a></p>
