--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P5] Y. Ye, <b>L. You</b>, H. Xu, A. Elzanaty, K. -K. Wong and X. Q. Gao, “SCNR maximization for MIMO ISAC assisted by fluid antenna system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025.</p>
+<li><p>[P5] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K. -K. Wong, and X. Q. Gao, “SCNR maximization for MIMO ISAC assisted by fluid antenna system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025.</p>
 </li>
 <li><p>[P4] Q. Zhang, L. Xu, J. H. Huang, T. Yang, J. Jiao, Y. Wang, Y. Shi, C. Y. Zhang, X. J. Zhang, K. Zhang, Y. P. Gong, N. Deng, N. Zhao, Z. Gao, S. J. Han, X. D. Xu, <b>L. You</b>, D. M. Wang, S. Jiang, D. X. Zhao, N. Zhang, L. J. Hu, X. W. He, Y. H. Li, X. Q. Gao, and X. H. You, “Distributed satellite information networks: Architecture, enabling technologies, and trends,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
 </li>
