--- a/patents.html
+++ b/patents.html
@@ -26,6 +26,8 @@
 </div>
 <h3>中国专利</h3>
 <ul>
+<li><p>[70] “大规模MIMO低轨卫星通信系统贪婪用户调度方法”, 国家发明专利, 专利号: ZL202211145083.4</p>
+</li
 <li><p>[69] “能效谱效联合优化的分布式多小区大规模MIMO功率分配方法”, 国家发明专利, 专利号: ZL20220405149.2</p>
 </li>
 <li><p>[68] “一种大规模MIMO跨频协作鲁棒传输方法”, 国家发明专利, 专利号: ZL202111505864.5</p>
