--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,10 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
+<li><p>[P8] B. Tang, H. Xu*, K.-K. Wong, <b>L. You</b>, J. Tang, Y. Zhang, and H. Shin, “Power minimization of multiuser FAS-RIS downlink system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025.</p>
+</li>
+<li><p>[P7] Z. Jin, <b>L. You*</b>, D. W. K. Ng, X.-G. Xia, and X. Q. Gao, “Near-field channel estimation for XL-MIMO: A deep generative model guided by side information,” <b><i>IEEE Transactions on Cognitive Communications and Networking</i></b>, 2025.</p>
+</li>
 <li><p>[P6] S. Cheng, <b>L. You*</b>, Z. Jin, L. Cheng, and X. Q. Gao, “Tensor-based channel estimation for near-field millimeter wave XL-MIMO systems,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10955747">Full Paper</a>]</p>
 </li>
 <li><p>[P5] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K. -K. Wong, and X. Q. Gao, “SCNR maximization for MIMO ISAC assisted by fluid antenna system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10949741">Full Paper</a>]</p>
