--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.04</span>]  Zhenzhou Jin's paper on XL-MIMO was accepted by IEEE Transactions on Cognitive Communications and Networking. (金振洲的关于超大规模MIMO的论文被IEEE Transactions on Cognitive Communications and Networking录用)</p>
+</li>
 <li><p>[<span class="statement">2025.04</span>]  Siyu Cheng's paper on XL-MIMO was accepted by IEEE Wireless Communications Letters. (程思雨的关于超大规模MIMO的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10955747">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.03</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Vehicular Technology. (叶育琦的关于流体天线的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/10949741">[link]</a></p>
