--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,8 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
+<li><p>[P9] J. Tang, <b>L. You*</b>, X. Gong, C. Xie, X. Q. Gao*, X.-G. Xia, and X. Shi, "Statistical CSI acquisition for multi-frequency massive MIMO systems", <b><i>IEEE Transactions on Communications</i></b>, 2025.</p>
+</li>
 <li><p>[P8] B. Tang, H. Xu*, K.-K. Wong, <b>L. You</b>, J. Tang, Y. Zhang, and H. Shin, “Power minimization of multiuser FAS-RIS downlink system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025.</p>
 </li>
 <li><p>[P7] Z. Jin, <b>L. You*</b>, D. W. K. Ng, X.-G. Xia, and X. Q. Gao, “Near-field channel estimation for XL-MIMO: A deep generative model guided by side information,” <b><i>IEEE Transactions on Cognitive Communications and Networking</i></b>, 2025.</p>
