--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.04</span>]  Huibin Zhou's paper on massive MIMO LEO satellite communications was accepted by IEEE Transactions on Communications. (周慧斌的关于大规模MIMO低轨卫星通信的论文被IEEE Transactions on Communications录用)</p>
+</li>
 <li><p>[<span class="statement">2025.04</span>]  Jinke Tang's paper on multi-frequency massive MIMO was accepted by IEEE Transactions on Communications. (汤金科的关于多频段大规模MIMO的论文被IEEE Transactions on Communications录用)</p>
 </li>
-<li><p>[<span class="statement">2025.04</span>]  Zhenzhou Jin's paper on XL-MIMO was accepted by IEEE Transactions on Cognitive Communications and Networking. (金振洲的关于超大规模MIMO的论文被IEEE Transactions on Cognitive Communications and Networking录用)</p>
+<li><p>[<span class="statement">2025.04</span>]  Zhenzhou Jin's paper on XL-MIMO was accepted by IEEE Transactions on Cognitive Communications and Networking. (金振洲的关于超大规模MIMO的论文被IEEE Transactions on Cognitive Communications and Networking录用) <a href="https://ieeexplore.ieee.org/document/10981727">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.04</span>]  Siyu Cheng's paper on XL-MIMO was accepted by IEEE Wireless Communications Letters. (程思雨的关于超大规模MIMO的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10955747">[link]</a></p>
 </li>
@@ -79,13 +81,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2024.12</span>]  Two papers were accepted by IEEE WCNC 2025. (课题组2篇论文被2025 IEEE WCNC会议录用)</p>
 </li>
-<li><p>[<span class="statement">2024.11</span>]  姜涵予获江苏省优秀硕士学术学位论文
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2024.11</span>]  姜涵予获江苏省优秀硕士学术学位论文
+</li>
 <li><p>[<span class="statement">2024.11</span>]  祝贺叶育琦获国家奖学金，谢晨洁获至善奖学金，黄珂琳获小米奖学金（特等），孔庆付获联想研究院奖学金，徐泽野获校长奖学金
 </li>
 <li><p>[<span class="statement">2024.11</span>]  Zhenzhou Jin's paper on channel fingerprint construction was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10791446">[link]</a></p>
