--- a/other.html
+++ b/other.html
@@ -24,6 +24,8 @@
 <div id="toptitle">
 <h1>Other</h1>
 </div>
+<h3>Channel Charting <a href="https://channelcharting.github.io/">[link]</a></h3>
+<p>Channel charting learns a mapping from channel state information (CSI) to a so-called channel chart in which nearby datapoints indicate nearness in real space. In other words, the learned channel chart captures the nearby spatial geometry of the transmitting user equipments (UEs), effectively encoding relative (or logical) UE locations.</p>
 <h3>Satellite Mega Constellations <a href="https://www.comsoc.org/publications/best-readings/satellite-mega-constellations">[link]</a></h3>
 <p>The current momentum behind the satellite communications and networking area is substantial. One main difference between the legacy satellite systems and the mega-constellations of the 6G era satellite systems is the networking complexity aspect. These next-generation satellite networks have very high-speed inter-satellite links in addition to highly flexible resource allocation. For efficient operation, the new satellite networks are expected to be autonomous, intelligent, resilient, self-organizing and self-controlling as much as possible to reduce the cost of human intervention in highly complicated settings. These challenges come with a high potential of enabling new services and applications including direct-to-device connections through massive connectivity as well as orbital edge computing and caching. Clearly, the satellite mega-constellations in the 6G era will create unprecedented opportunities once the relevant challenges are fully addressed by the research community.</p>
 <h3>Fluid Antenna System <a href="https://www.ee.ucl.ac.uk/fluid-antenna-systems/Home.html">[link]</a></h3>
