--- a/publications.html
+++ b/publications.html
@@ -245,11 +245,11 @@
 </li>
 <li><p>[C50] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Ultra-grained channel fingerprint construction via conditional generative diffusion models,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6.</p>
 </li>
-<li><p>[C49] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Near-field multi-user holographic MIMO communications over Ricean fading channels,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6.</p>
+<li><p>[C49] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Near-field multi-user holographic MIMO communications over Ricean fading channels,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/10978499">Full Paper</a>]</p>
 </li>
-<li><p>[C48] X. Guo, Q. Liu*, S. Wang, and <b>L. You*</b>, “Stochastic geometry-based MCS adaption analysis for uplink cellular networks,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6.</p>
+<li><p>[C48] X. Guo, Q. Liu*, S. Wang, and <b>L. You*</b>, “Stochastic geometry-based MCS adaption analysis for uplink cellular networks,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/10978118">Full Paper</a>]</p>
 </li>
-<li><p>[C47] H. Zhou, X. Gong, C. G. Tsinos, <b>L. You*</b>, X. Gao, and B. Ottersten, “GNN-enabled deep unfolding for precoding in massive MIMO LEO satellite communications,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6.</p>
+<li><p>[C47] H. Zhou, X. Gong, C. G. Tsinos, <b>L. You*</b>, X. Gao, and B. Ottersten, “GNN-enabled deep unfolding for precoding in massive MIMO LEO satellite communications,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/10978590">Full Paper</a>]</p>
 </li>
 </ul>
 <h4>Year 2024</h4>
