--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.04</span>]  Chenjie Xie's paper on multi-band channel fingerprints extrapolation was accepted by IEEE Journal on Selected Areas in Communications.  (谢晨洁的关于多频段信道图谱的论文被IEEE Journal on Selected Areas in Communications录用)</p>
+</li>
 <li><p>[<span class="statement">2025.04</span>]  Huibin Zhou's paper on massive MIMO LEO satellite communications was accepted by IEEE Transactions on Communications. (周慧斌的关于大规模MIMO低轨卫星通信的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/10993491">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.04</span>]  Jinke Tang's paper on multi-frequency massive MIMO was accepted by IEEE Transactions on Communications. (汤金科的关于多频段大规模MIMO的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/10993474">[link]</a></p>
