--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,8 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
+<li><p>[P11] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “CF-CGN: Channel fingerprints extrapolation for multi-band massive MIMO transmission based on cycle-consistent generative networks,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2025.</p>
+</li>
 <li><p>[P10] H. Zhou, X. Gong, C. G. Tsinos, <b>L. You*</b>, X. Gao, and B. Ottersten, “GNN-enabled precoding for massive MIMO LEO satellite communications,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993491">Full Paper</a>]</p>
 </li>
 <li><p>[P9] J. Tang, <b>L. You*</b>, X. Gong, C. Xie, X. Q. Gao*, X.-G. Xia, and X. Shi, "Statistical CSI acquisition for multi-frequency massive MIMO systems", <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993474">Full Paper</a>]</p>
