--- a/publications.html
+++ b/publications.html
@@ -27,33 +27,33 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P12] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, W. K. New, and C.-B. Chae, “Capacity maximization of uplink with fluid antenna system at both ends,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025.</p>
+<li><p>[P11] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, W. K. New, and C.-B. Chae, “Capacity maximization of uplink with fluid antenna system at both ends,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025.</p>
 </li>
-<li><p>[P11] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “CF-CGN: Channel fingerprints extrapolation for multi-band massive MIMO transmission based on cycle-consistent generative networks,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2025.</p>
+<li><p>[P10] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “CF-CGN: Channel fingerprints extrapolation for multi-band massive MIMO transmission based on cycle-consistent generative networks,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2025.</p>
 </li>
-<li><p>[P10] H. Zhou, X. Gong, C. G. Tsinos, <b>L. You*</b>, X. Gao, and B. Ottersten, “GNN-enabled precoding for massive MIMO LEO satellite communications,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993491">Full Paper</a>]</p>
+<li><p>[P9] H. Zhou, X. Gong, C. G. Tsinos, <b>L. You*</b>, X. Gao, and B. Ottersten, “GNN-enabled precoding for massive MIMO LEO satellite communications,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993491">Full Paper</a>]</p>
 </li>
-<li><p>[P9] J. Tang, <b>L. You*</b>, X. Gong, C. Xie, X. Q. Gao*, X.-G. Xia, and X. Shi, "Statistical CSI acquisition for multi-frequency massive MIMO systems", <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993474">Full Paper</a>]</p>
+<li><p>[P8] J. Tang, <b>L. You*</b>, X. Gong, C. Xie, X. Q. Gao*, X.-G. Xia, and X. Shi, "Statistical CSI acquisition for multi-frequency massive MIMO systems", <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993474">Full Paper</a>]</p>
 </li>
-<li><p>[P8] B. Tang, H. Xu*, K.-K. Wong, <b>L. You</b>, J. Tang, Y. Zhang, and H. Shin, “Power minimization of multiuser FAS-RIS downlink system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10992286">Full Paper</a>]</p>
+<li><p>[P7] B. Tang, H. Xu*, K.-K. Wong, <b>L. You</b>, J. Tang, Y. Zhang, and H. Shin, “Power minimization of multiuser FAS-RIS downlink system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10992286">Full Paper</a>]</p>
 </li>
-<li><p>[P7] Z. Jin, <b>L. You*</b>, D. W. K. Ng, X.-G. Xia, and X. Q. Gao, “Near-field channel estimation for XL-MIMO: A deep generative model guided by side information,” <b><i>IEEE Transactions on Cognitive Communications and Networking</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10981727">Full Paper</a>]</p>
+<li><p>[P6] Z. Jin, <b>L. You*</b>, D. W. K. Ng, X.-G. Xia, and X. Q. Gao, “Near-field channel estimation for XL-MIMO: A deep generative model guided by side information,” <b><i>IEEE Transactions on Cognitive Communications and Networking</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10981727">Full Paper</a>]</p>
 </li>
-<li><p>[P6] S. Cheng, <b>L. You*</b>, Z. Jin, L. Cheng, and X. Q. Gao, “Tensor-based channel estimation for near-field millimeter wave XL-MIMO systems,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10955747">Full Paper</a>]</p>
+<li><p>[P5] S. Cheng, <b>L. You*</b>, Z. Jin, L. Cheng, and X. Q. Gao, “Tensor-based channel estimation for near-field millimeter wave XL-MIMO systems,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10955747">Full Paper</a>]</p>
 </li>
-<li><p>[P5] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K. -K. Wong, and X. Q. Gao, “SCNR maximization for MIMO ISAC assisted by fluid antenna system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10949741">Full Paper</a>]</p>
+<li><p>[P4] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K. -K. Wong, and X. Q. Gao, “SCNR maximization for MIMO ISAC assisted by fluid antenna system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10949741">Full Paper</a>]</p>
 </li>
-<li><p>[P4] Q. Zhang, L. Xu, J. H. Huang, T. Yang, J. Jiao, Y. Wang, Y. Shi, C. Y. Zhang, X. J. Zhang, K. Zhang, Y. P. Gong, N. Deng, N. Zhao, Z. Gao, S. J. Han, X. D. Xu, <b>L. You</b>, D. M. Wang, S. Jiang, D. X. Zhao, N. Zhang, L. J. Hu, X. W. He, Y. H. Li, X. Q. Gao, and X. H. You, “Distributed satellite information networks: Architecture, enabling technologies, and trends,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
+<li><p>[P3] Q. Zhang, L. Xu, J. H. Huang, T. Yang, J. Jiao, Y. Wang, Y. Shi, C. Y. Zhang, X. J. Zhang, K. Zhang, Y. P. Gong, N. Deng, N. Zhao, Z. Gao, S. J. Han, X. D. Xu, <b>L. You</b>, D. M. Wang, S. Jiang, D. X. Zhao, N. Zhang, L. J. Hu, X. W. He, Y. H. Li, X. Q. Gao, and X. H. You, “Distributed satellite information networks: Architecture, enabling technologies, and trends,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
 </li>
-<li><p>[P3] J. Fang, Y. Liang, G. Sun, H. Hou, Y. Wang, <b>L. You</b>, and W. J. Wang*, “Polar-coded tensor-based unsourced random access with soft decoding,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10938717">Full Paper</a>]</p>
+<li><p>[P2] J. Fang, Y. Liang, G. Sun, H. Hou, Y. Wang, <b>L. You</b>, and W. J. Wang*, “Polar-coded tensor-based unsourced random access with soft decoding,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10938717">Full Paper</a>]</p>
 </li>
-<li><p>[P2] Y. M. Zhu, J. W. Zhuang, G. L. Sun, H. W. Hou, <b>L. You</b>, and W. J. Wang*, “Joint channel estimation and prediction for massive MIMO with frequency hopping sounding,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10818554">Full Paper</a>]</p>
-</li>
-<li><p>[P1] J. Tang, X. Q. Gao*, <b>L. You</b>, D. Shi, J. Yang, X.-G. Xia, X. Zhao, and P. Jiang, “Massive MIMO-OFDM channel acquisition with time-frequency phase-shifted pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10769510">Full Paper</a>]</p>
+<li><p>[P1] Y. M. Zhu, J. W. Zhuang, G. L. Sun, H. W. Hou, <b>L. You</b>, and W. J. Wang*, “Joint channel estimation and prediction for massive MIMO with frequency hopping sounding,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10818554">Full Paper</a>]</p>
 </li>
 </ul>
 <h4>Year 2025</h4>
 <ul>
+<li><p>[J83] J. Tang, X. Q. Gao*, <b>L. You</b>, D. Shi, J. Yang, X.-G. Xia, X. Zhao, and P. Jiang, “Massive MIMO-OFDM channel acquisition with time-frequency phase-shifted pilots,” <b><i>IEEE Transactions on Communications</i></b>, vol. 73, no. 6, pp. 4520-4535, Jun. 2025. [<a href="https://ieeexplore.ieee.org/document/10769510">Full Paper</a>]</p>
+</li>
 <li><p>[J82] R. Sun, <b>L. You</b>, A.-A. Lu, C. Sun, X. Q. Gao*, and X.-G. Xia, “Precoder design for user-centric network massive MIMO with matrix manifold optimization,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, vol. 43, no. 3, pp. 705-719, Mar. 2025. [<a href="https://ieeexplore.ieee.org/document/10886952">Full Paper</a>]</p>
 </li>
 <li><p>[J81] Y. Zhu, <b>L. You*</b>, Q. Kong, G. Seco-Granados, and X. Q. Gao, “Robust precoding for massive MIMO LEO satellite localization systems,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, vol. 74, no. 2, pp. 3434-3438, Feb. 2025. [<a href="https://ieeexplore.ieee.org/document/10695037">Full Paper</a>]</p>
