--- a/publications.html
+++ b/publications.html
@@ -27,9 +27,11 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
+<li><p>[P12] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Specific absorption rate-aware multiuser MIMO assisted by fluid antenna system,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025.</p>
+</li>
 <li><p>[P11] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, W. K. New, and C.-B. Chae, “Capacity maximization of uplink with fluid antenna system at both ends,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11049889">Full Paper</a>]</p>
 </li>
-<li><p>[P10] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “CF-CGN: Channel fingerprints extrapolation for multi-band massive MIMO transmission based on cycle-consistent generative networks,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2025.</p>
+<li><p>[P10] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “CF-CGN: Channel fingerprints extrapolation for multi-band massive MIMO transmission based on cycle-consistent generative networks,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11059941">Full Paper</a>]</p>
 </li>
 <li><p>[P9] H. Zhou, X. Gong, C. G. Tsinos, <b>L. You*</b>, X. Gao, and B. Ottersten, “GNN-enabled precoding for massive MIMO LEO satellite communications,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993491">Full Paper</a>]</p>
 </li>
@@ -41,7 +43,7 @@
 </li>
 <li><p>[P5] S. Cheng, <b>L. You*</b>, Z. Jin, L. Cheng, and X. Q. Gao, “Tensor-based channel estimation for near-field millimeter wave XL-MIMO systems,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10955747">Full Paper</a>]</p>
 </li>
-<li><p>[P4] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K. -K. Wong, and X. Q. Gao, “SCNR maximization for MIMO ISAC assisted by fluid antenna system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10949741">Full Paper</a>]</p>
+<li><p>[P4] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “SCNR maximization for MIMO ISAC assisted by fluid antenna system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10949741">Full Paper</a>]</p>
 </li>
 <li><p>[P3] Q. Zhang, L. Xu, J. H. Huang, T. Yang, J. Jiao, Y. Wang, Y. Shi, C. Y. Zhang, X. J. Zhang, K. Zhang, Y. P. Gong, N. Deng, N. Zhao, Z. Gao, S. J. Han, X. D. Xu, <b>L. You</b>, D. M. Wang, S. Jiang, D. X. Zhao, N. Zhang, L. J. Hu, X. W. He, Y. H. Li, X. Q. Gao, and X. H. You, “Distributed satellite information networks: Architecture, enabling technologies, and trends,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
 </li>
