--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
-<li><p>[<span class="statement">2025.06</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Wireless Communications. (叶育琦的关于流体天线的论文被IEEE Transactions on Wireless Communications录用)</p>
+<li><p>[<span class="statement">2025.06</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Wireless Communications. (叶育琦的关于流体天线的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/11080242">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.05</span>]  Chenjie Xie's paper on multi-band channel fingerprints extrapolation was accepted by IEEE Journal on Selected Areas in Communications. (谢晨洁的关于多频段信道图谱的论文被IEEE Journal on Selected Areas in Communications录用) <a href="https://ieeexplore.ieee.org/document/11059941">[link]</a></p>
 </li>
