--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,10 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
+<li><p>[P12] M. Qian, X. Mu, <b>L. You*</b>, H. Shin, and M. Matthaiou*, “Spectral efficiency analysis of near-field holographic MIMO over Ricean fading channels,” <b><i>IEEE Transactions on Communications</i></b>, 2025.</p>
+</li>
+<li><p>[P11] K. Huang, <b>L. You*</b>, M. Qian, B. Jiang, and X. Q. Gao, “QoS-guaranteed MIMO SWIPT assisted by dynamic metasurface antenna,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11096022">Full Paper</a>]</p>
+</li>
 <li><p>[P10] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Specific absorption rate-aware multiuser MIMO assisted by fluid antenna system,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11080242">Full Paper</a>]</p>
 </li>
 <li><p>[P9] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, W. K. New, and C.-B. Chae, “Capacity maximization of uplink with fluid antenna system at both ends,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11049889">Full Paper</a>]</p>
