--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Communications录用)</p>
+</li>
+<li><p>[<span class="statement">2025.07</span>]  Kelin Huang's paper on DMA was accepted by IEEE Transactions on Vehicular Technology. (黄珂琳的关于动态超表面天线的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11096022">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2025.06</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Wireless Communications. (叶育琦的关于流体天线的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/11080242">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.05</span>]  Chenjie Xie's paper on multi-band channel fingerprints extrapolation was accepted by IEEE Journal on Selected Areas in Communications. (谢晨洁的关于多频段信道图谱的论文被IEEE Journal on Selected Areas in Communications录用) <a href="https://ieeexplore.ieee.org/document/11059941">[link]</a></p>
@@ -77,15 +81,15 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.03</span>]  Yu Zhao's paper on massive MIMO was accepted by IEEE VTC 2025 Spring. (赵宇的关于大规模MIMO的论文被2025 IEEE VTC Spring录用)</p>
 </li>
-<li><p>[<span class="statement">2025.03</span>]  Mengyu Qian and Huibin Zhou received the Student Travel Grant for IEEE WCNC 2025. (课题组潜梦羽和周慧斌获得IEEE WCNC 2025 Student Travel Grant奖项)</p>
-</li>
-<li><p>[<span class="statement">2025.02</span>]  Two papers were accepted by IEEE INFOCOM workshop 2025. (课题组2篇论文被2025 IEEE INFOCOM workshop录用)</p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2025.03</span>]  Mengyu Qian and Huibin Zhou received the Student Travel Grant for IEEE WCNC 2025. (课题组潜梦羽和周慧斌获得IEEE WCNC 2025 Student Travel Grant奖项)</p>
+</li>
+<li><p>[<span class="statement">2025.02</span>]  Two papers were accepted by IEEE INFOCOM workshop 2025. (课题组2篇论文被2025 IEEE INFOCOM workshop录用)</p>
+</li>
 <li><p>[<span class="statement">2025.01</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE WCNC workshop 2025. (潜梦羽的关于全息MIMO的论文被2025 IEEE WCNC workshop录用)</p>
 </li>
 <li><p>[<span class="statement">2024.12</span>]  Two papers were accepted by IEEE WCNC 2025. (课题组2篇论文被2025 IEEE WCNC会议录用)</p>
