--- a/publications.html
+++ b/publications.html
@@ -251,6 +251,8 @@
 <h2>Conference</h2>
 <h4>Year 2025</h4>
 <ul>
+<li><p>[C53] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Beamforming design for CAPA-based multicast communications,” in <b><i>Proc. IEEE GLOBECOM 2025</i></b>, Taipei, Taiwan, Dec. 2025, 1-6.</p>
+</li>
 <li><p>[C52] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, and X. Q. Gao, “Channel estimation in massive MIMO-OFDM with multi-group adjustable phase shift pilots,” in <b><i>Proc. IEEE VTC 2025 Spring</i></b>, Oslo, Norway, Jun. 2025, 1-6.</p>
 </li>
 <li><p>[C51] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “Channel fingerprints extrapolation via generative model for multi-band massive MIMO transmission,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6.</p>
@@ -381,4 +383,5 @@
 </table>
 </body>
 </html>
+
 
