--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Email: lyou@seu.edu.cn <br />
 <p><ul>
 <li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE GLOBECOM 2025. (潜梦羽的关于连续孔径阵列通信的论文被2025 IEEE GLOBECOM会议录用)</p>
 </li>
-<li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Communications录用)</p>
+<li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/11112605">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.07</span>]  Kelin Huang's paper on DMA was accepted by IEEE Transactions on Vehicular Technology. (黄珂琳的关于动态超表面天线的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11096022">[link]</a></p>
 </li>
@@ -206,5 +206,6 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
