--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,7 @@
 <ul>
 <li><p>[P13] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
 </li>
-<li><p>[P12] M. Qian, X. Mu, <b>L. You*</b>, H. Shin, and M. Matthaiou*, “Spectral efficiency analysis of near-field holographic MIMO over Ricean fading channels,” <b><i>IEEE Transactions on Communications</i></b>, 2025.</p>
+<li><p>[P12] M. Qian, X. Mu, <b>L. You*</b>, H. Shin, and M. Matthaiou*, “Spectral efficiency analysis of near-field holographic MIMO over Ricean fading channels,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11112605">Full Paper</a>]</p>
 </li>
 <li><p>[P11] K. Huang, <b>L. You*</b>, M. Qian, B. Jiang, and X. Q. Gao, “QoS-guaranteed MIMO SWIPT assisted by dynamic metasurface antenna,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11096022">Full Paper</a>]</p>
 </li>
@@ -383,5 +383,6 @@
 </table>
 </body>
 </html>
+
 
 
