--- a/patents.html
+++ b/patents.html
@@ -171,6 +171,8 @@
 </ul>
 <h3>外国专利</h3>
 <ul>
+<li><p>[7] “SATELLITE-BASED BLOCKCHAIN ARCHITECTURE”, 美国发明专利, 专利号: US12355545B2</p>
+</li>
 <li><p>[6] “TRANSMIT METHOD BASED ON SATELLITE MASSIVE MIMO INTEGRATED SENSING AND COMMUNICATION”, 美国发明专利, 专利号: US12244370B2</p>
 </li>
 <li><p>[5] “NEAR-FIELD BROADBAND UPLINK MIMO TRANSMISSION METHOD ASSISTED BY DYNAMIC METASURFACE ANTENNA”, 美国发明专利, 专利号: US12206469B2</p>
@@ -189,3 +191,4 @@
 </table>
 </body>
 </html>
+
