--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
-<li><p>[<span class="statement">2025.08</span>]  Qingfu Kong's paper on cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Transactions on Vehicular Technology. (孔庆付的关于大规模MIMO低轨星地协作网络的论文被IEEE Transactions on Vehicular Technology录用)</p>
+<li><p>[<span class="statement">2025.08</span>]  Qingfu Kong's paper on cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Transactions on Vehicular Technology. (孔庆付的关于大规模MIMO低轨星地协作网络的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11143887">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE GLOBECOM 2025. (潜梦羽的关于连续孔径阵列通信的论文被2025 IEEE GLOBECOM会议录用)</p>
 </li>
@@ -208,6 +208,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
