--- a/publications.html
+++ b/publications.html
@@ -255,6 +255,8 @@
 <h2>Conference</h2>
 <h4>Year 2025</h4>
 <ul>
+<li><p>[C54] J. Tang, X. Q. Gao*, <b>L. You</b>, X.-G. Xia, and C.-X. Wang, “Massive MIMO-OFDM statistical CSI acquisition with physical channel charting,” in <b><i>Proc. IEEE WCSP 2025</i></b>, Chongqing, China, Oct. 2025, 1-6.</p>
+</li>
 <li><p>[C53] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Beamforming design for CAPA-based multicast communications,” in <b><i>Proc. IEEE GLOBECOM 2025</i></b>, Taipei, Taiwan, Dec. 2025, 1-6.</p>
 </li>
 <li><p>[C52] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, and X. Q. Gao, “Channel estimation in massive MIMO-OFDM with multi-group adjustable phase shift pilots,” in <b><i>Proc. IEEE VTC 2025 Spring</i></b>, Oslo, Norway, Jun. 2025, 1-6.</p>
@@ -387,6 +389,7 @@
 </table>
 </body>
 </html>
+
 
 
 
