--- a/patents.html
+++ b/patents.html
@@ -26,6 +26,8 @@
 </div>
 <h3>中国专利</h3>
 <ul>
+<li><p>[72] “一种近场信道图谱辅助的超大规模MIMO非正交导频设计方法及系统”, 国家发明专利, 专利号: ZL202411026155.2</p>
+</li>
 <li><p>[71] “大规模MIMO低轨卫星通信系统遗传用户调度方法”, 国家发明专利, 专利号: ZL202211145101.9</p>
 </li>
 <li><p>[70] “大规模MIMO低轨卫星通信系统贪婪用户调度方法”, 国家发明专利, 专利号: ZL202211145083.4</p>
@@ -191,4 +193,5 @@
 </table>
 </body>
 </html>
+
 
